--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
+    "gulp-include": "^2.4.1",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.0",
     "gulp-rename": "^2.0.0",
@@ -18,6 +19,7 @@
     "gulp-sourcemaps": "3.0.0",
     "gulp-svgstore": "^7.0.1",
     "gulp-terser": "^2.0.1",
+    "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
     "postcss": "8.2.8",
     "postcss-csso": "^5.0.1",
@@ -29,8 +31,7 @@
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
-    "start": "gulp",
-    "html": "gulp html"
+    "start": "gulp"
   },
   "browserslist": [
     "last 2 versions",
@@ -51,6 +52,7 @@
   "dependencies": {
     "-": "0.0.1",
     "D": "^1.0.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "picturefill": "^3.0.3"
   }
 }
